tests/valid/core/set-value.coil
' @test valid
' @covers DEFINE, SET
' @description SET modifies an existing value

DEFINE counter
0
END

SET $counter
1
END

EXIT
